Adicionando commit e mudando o arquivo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Olá, seguem aplicações feitas baseadas no curso Git e Github</h1>
     <h2>Usado como base o site da alura</h2>
+    <h1>Adicionando commit</h1>
 </body>
 </html>
