Alterando o titulo da pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Atividade Git e Github</title>
+    <title>Atividade Git e Github Compasso</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
