--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, seguem aplicações feitas baseadas no curso Git e Github</h1>
     <h2>Usado como base o site da alura</h2>
     <h1>Adicionando commit</h1>
+    <h1>Curso Git e Github</h1>
 </body>
 </html>
