--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Olá, seguem aplicações feitas baseadas no curso Git e Github</h1>
     <h2>Usado como base o site da alura</h2>
-    <h1>Testando uso do branch </h1>
+    <h1>Atualizando o teste usando branch </h1>
     <h1>Curso Git e Github</h1>
 </body>
 </html>
