--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Olá, seguem aplicações feitas baseadas no curso Git e Github</h1>
+    <h2>Testando as novas aplicações, como modo de estudo e revisao</h2>
     <h2>Usado como base o site da alura</h2>
     <h1>Novo branch criado </h1>
     <h1>Curso Git e Github</h1>
